--- a/Kiznic/res/drawable-hdpi/layer_card_condition.xml
+++ b/Kiznic/res/drawable-hdpi/layer_card_condition.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-
-	<item android:left="0dp"
+    
+    <item android:left="0dp"
 	    android:right="0dp"
 	    android:top="0dp"
 	    android:bottom="2dp">
@@ -10,6 +10,8 @@
 	        <stroke
 	            android:width="1dip"
 	            android:color="#DEE7E7"/>
+	        
+	        <corners android:radius="5dp" />
 	        </shape>
 	    </item>
 
