전 push 미적용으로 인한 re-push

--- a/Kiznic/res/layout/activity_search.xml
+++ b/Kiznic/res/layout/activity_search.xml
@@ -1,111 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+	android:background="#F1F2F2"
     android:orientation="vertical" >
-    
-    <!-- search bar -->
-    
     <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:orientation="horizontal"
-	        android:background="#CACACA">        
-	    
-        <EditText
-        android:id="@+id/search_search_edittext"
         android:layout_width="match_parent"
-        android:layout_height="40dip"
-        android:hint="입력"/>
-        
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dip"
+        android:layout_marginRight="5dip"
+        android:layout_marginTop="5dip"
+        android:orientation="vertical">
+	        
+	    <!-- search bar -->
+	
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="40dip"
+	        android:background="@drawable/search_edittext_background"
+	        android:orientation="horizontal">        
+	
+	        <LinearLayout
+	            android:layout_width="0dip"
+	            android:layout_height="match_parent"
+	            android:layout_weight="16">
+	            
+	            <EditText
+			        android:id="@+id/search_search_edittext"
+			        android:layout_width="match_parent"
+			        android:layout_height="match_parent"
+			        android:paddingLeft="10dip"
+					android:singleLine="true"
+					android:background="@null"
+			        android:hint="입력"/>
+	            
+	        </LinearLayout>
+	        
+	        <LinearLayout
+	            android:layout_width="0dip"
+	            android:layout_height="match_parent"
+	            android:layout_weight="3">
+	            
+	            <ImageView
+	                android:id="@+id/search_searchbutton_image"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:padding="5dip"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentRight="true"
+		            android:src="@drawable/search_button" />
+	            
+	        </LinearLayout>
+	
+		</LinearLayout>
+	
+	    <!-- category -->
+	
+		<LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="30dip"
+		    android:layout_marginTop="5dip"
+		    android:layout_marginBottom="5dip"
+		    android:orientation="horizontal">
+	
+			<RelativeLayout
+			    android:id="@+id/search_category1_relativelayout"
+		        android:layout_width="0dip"
+		        android:layout_height="match_parent"
+		        android:layout_weight="1"
+		        android:layout_marginRight="1dip"
+		        android:orientation="vertical"
+		        android:background="@drawable/search_category_background"
+		        android:focusable="true">
+	
+			    <TextView
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_centerInParent="true"
+			        android:text="장르"
+			        android:textColor="#000000"
+			        android:textSize="20sp"/>
+	
+			</RelativeLayout>
+	
+			<RelativeLayout
+			    android:id="@+id/search_category2_relativelayout"
+		        android:layout_width="0dip"
+		        android:layout_height="match_parent"
+		        android:layout_weight="1"
+		        android:layout_marginRight="1dip"
+		        android:layout_marginLeft="1dip"
+		        android:orientation="vertical"
+		        android:background="@drawable/search_category_background"
+		        android:focusable="true">
+	
+			    <TextView
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_centerInParent="true"
+			        android:text="기간"
+			        android:textColor="#000000"
+			        android:textSize="20sp"/>
+			
+			</RelativeLayout>
+	
+			<RelativeLayout
+			    android:id="@+id/search_category3_relativelayout"
+		        android:layout_width="0dip"
+		        android:layout_height="match_parent"
+		        android:layout_weight="1"
+		        android:layout_marginRight="1dip"
+		        android:layout_marginLeft="1dip"
+		        android:orientation="vertical"
+		        android:background="@drawable/search_category_background"
+		        android:focusable="true">
+	
+			    <TextView
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_centerInParent="true"
+			        android:text="지역"
+			        android:textColor="#000000"
+			        android:textSize="20sp"/>
+			
+			</RelativeLayout>
+	
+			<RelativeLayout
+			    android:id="@+id/search_category4_relativelayout"
+		        android:layout_width="0dip"
+		        android:layout_height="match_parent"
+		        android:layout_weight="1"
+		        android:layout_marginLeft="1dip"
+		        android:orientation="vertical"
+		        android:background="@drawable/search_category_background"
+		        android:focusable="true">
+		
+			    <TextView
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_centerInParent="true"
+			        android:text="가격"
+			        android:textColor="#000000"
+			        android:textSize="20sp"/>
+			
+			</RelativeLayout>
+	
+		</LinearLayout>
+			
+		<ListView
+			android:id="@+id/search_list_view"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:headerDividersEnabled="true"
+			android:footerDividersEnabled="true"
+			android:listSelector="@android:color/transparent"
+			android:cacheColorHint="@android:color/transparent"
+			android:divider="@null"
+			android:dividerHeight="10dp" />
+	
 	</LinearLayout>
 	
-    <!-- category -->
-    
-	<LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="horizontal"
-	    android:background="#ACACAC">
-        
-		<LinearLayout
-	        android:layout_width="0dip"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:orientation="vertical"
-	        android:background="#ACACAC">
-        
-		    <TextView
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_gravity="center"
-		        android:text="장르"
-		        android:textColor="#000000"
-		        android:textSize="20sp"/>
-		    
-		</LinearLayout>
-	    
-		<LinearLayout
-	        android:layout_width="0dip"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:orientation="vertical"
-	        android:background="#ACACAC">
-        
-		    <TextView
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_gravity="center"
-		        android:text="기간"
-		        android:textColor="#000000"
-		        android:textSize="20sp"/>
-		    
-		</LinearLayout>
-		
-		<LinearLayout
-	        android:layout_width="0dip"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:orientation="vertical"
-	        android:background="#ACACAC">
-        
-		    <TextView
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_gravity="center"
-		        android:text="지역"
-		        android:textColor="#000000"
-		        android:textSize="20sp"/>
-		    
-		</LinearLayout>
-		
-		<LinearLayout
-	        android:layout_width="0dip"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:orientation="vertical"
-	        android:background="#ACACAC">
-        
-		    <TextView
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_gravity="center"
-		        android:text="가격"
-		        android:textColor="#000000"
-		        android:textSize="20sp"/>
-		    
-		</LinearLayout>
-		
-	</LinearLayout>
-    
-	<ListView
-		android:id="@+id/search_list_view"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:headerDividersEnabled="true"
-		android:footerDividersEnabled="true"
-		android:listSelector="@android:color/transparent"
-		android:cacheColorHint="@android:color/transparent"
-		android:divider="@null"
-		android:dividerHeight="10dp" />
 </LinearLayout>
