--- a/Kiznic/res/layout/activity_detailpage.xml
+++ b/Kiznic/res/layout/activity_detailpage.xml
@@ -1,12 +1,50 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+ <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:tools="http://schemas.android.com/tools"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:orientation="vertical"
+     android:background="#F1F2F2" >
     
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Detail View"/>
-
+     <ScrollView
+         android:layout_width="fill_parent"
+         android:layout_height="fill_parent"
+         android:orientation="vertical">
+     
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="100dip"
+	        android:orientation="vertical"
+	        android:layout_marginTop="5dip"
+	        android:layout_marginLeft="5dip"
+	        android:layout_marginRight="5dip"
+	        android:background="#ACACAC">
+	        
+	        <LinearLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="0dip"
+	            android:layout_weight="22">
+	            
+	            <ImageView
+	                android:layout_width="match_parent"
+	                android:layout_height="match_parent"
+	                android:src="@drawable/weather_image"/>
+	            
+	        </LinearLayout>
+	        
+	        <LinearLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="0dip"
+	            android:layout_weight="7">
+	            
+	            <TextView
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:text="[성남 아트센터] 배고픈 애벌레"
+	                android:textColor="#000000"
+	                android:textSize="25sp"/>
+	            
+	        </LinearLayout>
+	        
+	    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
