--- a/Kiznic/res/layout/activity_main.xml
+++ b/Kiznic/res/layout/activity_main.xml
@@ -8,113 +8,127 @@
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="100dip"
 		android:background="#FDF9F2"
-        android:orientation="horizontal">
+		android:layout_marginTop="5dip"
+		android:layout_marginRight="5dip"
+		android:layout_marginLeft="5dip"
+        android:orientation="vertical">
     
-        <!-- Profile -->
         <LinearLayout 
-            android:id="@+id/profile"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
+
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1"
+            android:layout_marginTop="5dip"
+            android:layout_marginLeft="5dip"
+            android:layout_marginRight="5dip"
             android:orientation="vertical">
             
-                <ImageView 
-	                android:id="@+id/profile_kidimage_image"
-	                android:layout_width="70dip"
-	                android:layout_height="70dip"
-	                android:layout_gravity="center"/>
-            
-            <TextView
+            <TextView 
                 android:id="@+id/profile_kidname_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="닉네임"
-                android:textSize="20sp"
-                android:textColor="#000000"/>
+                android:text="닉네이이임의 상태입력"
+               	android:textColor="#000000"
+               	android:textSize="14sp"/>
             
         </LinearLayout>
         
-        <!-- Condition -->
-        
         <LinearLayout 
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:orientation="vertical">
+
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="4"
+            android:orientation="horizontal">
             
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dip"
-                android:text="아이 상태입력"
-                android:textColor="#000000"
-                android:textSize="15sp"/>
-                
+            <!-- profile image -->
+            
             <LinearLayout
-                android:layout_width="match_parent"
+                
+                android:id="@+id/profile"
+                android:layout_width="0dip"
                 android:layout_height="match_parent"
-                android:background="@drawable/main_condition_card_background"
+                android:layout_weight="2"
+                android:layout_margin="5dip">
+                
+                <ImageView 
+                    
+                android:id="@+id/profile_kidimage_image"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"/>
+                
+            </LinearLayout>
+            
+            <!-- condition -->
+            
+            <LinearLayout
+                
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:layout_margin="5dip"
+                android:background="@drawable/condition_background"
                 android:orientation="horizontal">
                 
-                <!-- Condition In/Out -->
-                
-                <LinearLayout
-                    android:id="@+id/condition_inout_layout"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="7"
-                    android:orientation="vertical">
+                <RelativeLayout
                     
-                     <ToggleButton
-                         android:id="@+id/condition_inout_image"
-			            android:layout_width="40dip"
-			            android:layout_height="40dip"
-			            android:background="@drawable/condition_inout_toggle"
-			            android:textOn="IN"
-			            android:textOff="OUT"
-			            android:layout_gravity="center"/>
-                     
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="21">
+                    
+                    <ToggleButton
+                        
+                        android:id="@+id/condition_inout_image"
+				        android:layout_width="40dip"
+				        android:layout_height="40dip"
+				        android:background="@drawable/condition_inout_toggle"
+				        android:textOn="IN"
+				        android:textOff="OUT"
+						android:layout_centerInParent="true"/>
+                    
                     <TextView
-                        android:id="@+id/condition_inout_text"
+                        
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
                         android:text="실내/실외"
                         android:textColor="#000000"
-                        android:textSize="15sp"/>
+                        android:textSize="13sp"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentBottom="true"/>
                     
-                </LinearLayout>
-                
-                <!-- Condition Range -->
-                
-                <LinearLayout
-                    android:id="@+id/condition_range_layout"
-                    android:layout_width="0dp"
+                </RelativeLayout>
+                    
+                <RelativeLayout
+                    
+                    android:layout_width="0dip"
                     android:layout_height="match_parent"
-                    android:layout_weight="18"
-                    android:layout_gravity="right"
-                    android:orientation="vertical">
+                    android:layout_weight="51">
                     
                     <ImageView
+                        
                         android:id="@+id/condition_range_image"
                         android:layout_width="wrap_content"
                         android:layout_height="40dip"
+                        android:layout_centerInParent="true"
                         android:src="@drawable/condition_bar"/>
                     
                     <TextView
+                        
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom|right"
                         android:text="이동 반경"
                         android:textColor="#000000"
-                        android:textSize="15sp"/>
+                        android:textSize="13sp"
+                        android:layout_marginRight="5dip"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentBottom="true"/>
                     
-                </LinearLayout>   
+                </RelativeLayout>
                 
             </LinearLayout>
             
         </LinearLayout>
+        
         
     </LinearLayout>
     
@@ -127,6 +141,5 @@
 		android:footerDividersEnabled="true"
 		android:listSelector="@android:color/transparent"
 		android:cacheColorHint="@android:color/transparent"
-		android:divider="@null"
-		android:dividerHeight="10dp" />
+		android:divider="@null" />
 </LinearLayout>
