--- a/Kiznic/res/layout/activity_mypage.xml
+++ b/Kiznic/res/layout/activity_mypage.xml
@@ -2,16 +2,97 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F1F2F2"
     android:orientation="vertical" >
     
-	<ListView
-		android:id="@+id/mypage_list_view"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:headerDividersEnabled="true"
-		android:footerDividersEnabled="true"
-		android:listSelector="@android:color/transparent"
-		android:cacheColorHint="@android:color/transparent"
-		android:divider="@null"
-		android:dividerHeight="10dp" />
+    <!-- ID -->
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dip"
+        android:layout_marginTop="5dip"
+        android:layout_marginLeft="5dip"
+        android:layout_marginRight="5dip"
+        android:orientation="horizontal"
+        android:background="@drawable/mypage_card_background">
+        
+        <RelativeLayout
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="51">
+            
+            <TextView
+                android:id="@+id/mypage_id_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dip"
+                android:text="cmin890@gmail.com"
+                android:textColor="#000000"
+                android:textSize="20sp"/>
+            
+        </RelativeLayout>
+        
+        <RelativeLayout
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="7">
+            
+            <ImageView
+                android:id="@+id/mypage_idinput_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dip"
+                android:layout_centerInParent="true"
+                android:src="@drawable/mypage_next"/>
+            
+        </RelativeLayout>
+        
+    </LinearLayout>
+    
+    <!-- nickname -->
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dip"
+        android:layout_marginTop="5dip"
+        android:layout_marginLeft="5dip"
+        android:layout_marginRight="5dip"
+        android:orientation="horizontal"
+        android:background="@drawable/mypage_card_background">
+        
+        <RelativeLayout
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="51">
+            
+            <TextView
+                android:id="@+id/mypage_nickname_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dip"
+                android:text="닉네이이임"
+                android:textColor="#000000"
+                android:textSize="20sp"/>
+            
+        </RelativeLayout>
+        
+        <RelativeLayout
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="7">
+            
+            <ImageView
+                android:id="@+id/mypage_nicknameinput_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+     		    android:padding="10dip"
+                android:layout_centerInParent="true"
+                android:src="@drawable/mypage_next"/>
+            
+        </RelativeLayout>
+        
+    </LinearLayout>
+    
 </LinearLayout>
