--- a/Kiznic/res/layout/list_item_card.xml
+++ b/Kiznic/res/layout/list_item_card.xml
@@ -2,14 +2,14 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
+	android:layout_height="match_parent"
 	android:descendantFocusability="beforeDescendants"
 	android:orientation="vertical">
 
 	<LinearLayout
 		android:orientation="vertical"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="250dip"
 		android:layout_margin="5dip"
 		android:background="#FDF9F2"
 		android:descendantFocusability="afterDescendants">
@@ -26,9 +26,11 @@
 	            android:id="@+id/recommend_title_text"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:text="공연"
+	            android:layout_gravity="center"
+	            android:layout_marginLeft="5dip"
+	            android:text="공연 / 전시"
 	            android:textColor="#000000"
-	            android:textSize="14sp"/>
+	            android:textSize="16sp"/>
 	        
 	    </LinearLayout>
 	    
@@ -51,8 +53,9 @@
 	            
 	            <ImageView
 	                android:id="@+id/recommend_posterimage_image"
-	                android:layout_width="80dip"
-	                android:layout_height="80dip"
+	                android:layout_width="match_parent"
+	                android:layout_height="match_parent"
+	                android:padding="3dip"
 	                android:layout_gravity="center"
 	                android:src="@drawable/recommend"/>
 	            
@@ -84,6 +87,7 @@
 	                    android:id="@+id/recommend_itemage_text"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
+	                    android:layout_marginTop="3dip"
 	                    android:text="만 36개월 이상"
 	                    android:textColor="#000000"
 	                    android:textSize="10sp"/>
@@ -185,22 +189,37 @@
 	            android:gravity="center"
 	            android:orientation="vertical">
 	            
-	             <ImageView
+	             <RelativeLayout
+	                 android:layout_width="match_parent"
+	                 android:layout_height="0dip"
+	                 android:layout_weight="75">
+	                 
+	                 <ImageView
 		             android:id="@+id/recommend_weatherimage_image"
 		             android:layout_width="50dip"
 		             android:layout_height="50dip"
-		             android:layout_gravity="center"
+		             android:layout_centerInParent="true"
+		             android:paddingTop="3dip"
 		             android:src="@drawable/weather_image"/>
-		             
-		         <TextView
-		             android:id="@+id/recommend_weathertemperature_text"
-		             android:layout_width="wrap_content"
-		             android:layout_height="wrap_content"
-		             android:layout_gravity="center"
-		             android:text="18.3°"
-		             android:textColor="#000000"
-		             android:textSize="20sp"/>
-		             
+	                 
+	             </RelativeLayout>
+	             
+	             <RelativeLayout
+	                 android:layout_width="match_parent"
+	                 android:layout_height="0dip"
+	                 android:layout_weight="50">
+	                 
+	                 <TextView
+			             android:id="@+id/recommend_weathertemperature_text"
+			             android:layout_width="wrap_content"
+			             android:layout_height="wrap_content"
+			             android:layout_centerInParent="true"
+			             android:text="18.3°"
+			             android:textColor="#000000"
+			             android:textSize="20sp"/>
+	                 
+	             </RelativeLayout>
+	                 
 	         </LinearLayout>
 	        
 	    </LinearLayout>
@@ -224,9 +243,9 @@
 	            
 	            <ImageView
 	                android:id="@+id/recommend_posterimage_image2"
-	                android:layout_width="80dip"
-	                android:layout_height="80dip"
-	                android:layout_gravity="center"
+	                android:layout_width="match_parent"
+	                android:layout_height="match_parent"
+	                android:padding="3dip"
 	                android:src="@drawable/recommend"/>
 	            
 	        </LinearLayout>
@@ -257,6 +276,7 @@
 	                    android:id="@+id/recommend_itemage_text2"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
+	                    android:layout_marginTop="3dip"
 	                    android:text="만 36개월 이상"
 	                    android:textColor="#000000"
 	                    android:textSize="10sp"/>
@@ -358,21 +378,36 @@
 	            android:gravity="center"
 	            android:orientation="vertical">
 	            
-	             <ImageView
-		             android:id="@+id/recommend_weatherimage_image2"
-		             android:layout_width="50dip"
-		             android:layout_height="50dip"
-		             android:layout_gravity="center"
-		             android:src="@drawable/weather_image"/>
-		             
-		         <TextView
+	             <RelativeLayout
+	                 android:layout_width="match_parent"
+	                 android:layout_height="0dip"
+	                 android:layout_weight="75">
+	                 
+	                 <ImageView
+			             android:id="@+id/recommend_weatherimage_image2"
+			             android:layout_width="50dip"
+			             android:layout_height="50dip"
+						 android:layout_centerInParent="true"
+						 android:paddingTop="3dip"
+			             android:src="@drawable/weather_image"/>
+	                 
+	             </RelativeLayout>
+	             
+	             <RelativeLayout
+	                 android:layout_width="match_parent"
+	                 android:layout_height="0dip"
+	                 android:layout_weight="50">
+	             
+	                 <TextView
 		             android:id="@+id/recommend_weathertemperature_text2"
 		             android:layout_width="wrap_content"
 		             android:layout_height="wrap_content"
-		             android:layout_gravity="center"
+					 android:layout_centerInParent="true"
 		             android:text="18.3°"
 		             android:textColor="#000000"
 		             android:textSize="20sp"/>
+	                 
+	             </RelativeLayout>
 		             
 	         </LinearLayout>
 	        
