--- a/Kiznic/res/layout/list_item_weather_card.xml
+++ b/Kiznic/res/layout/list_item_weather_card.xml
@@ -153,31 +153,14 @@
 		             	        android:orientation="horizontal">
 		             	        
 		             	        <RelativeLayout
-		             	            android:layout_width="0dip"
-		             	            android:layout_height="match_parent"
-		             	            android:layout_weight="1">
-		             	            
-		             	            <TextView
-					                    android:id="@+id/weather_compareyesterday_text"
-					                    android:layout_width="wrap_content"
-					                    android:layout_height="wrap_content"
-										android:layout_centerHorizontal="true"
-					                    android:text="어제보다 -1.3°"
-					                    android:textColor="#000000"
-					                    android:textSize="10sp"/>
-		             	            
-		             	        </RelativeLayout>
-		             	        
-		             	        <RelativeLayout
-		             	            android:layout_width="0dip"
-		             	            android:layout_height="match_parent"
-		             	            android:layout_weight="1">
+		             	            android:layout_width="match_parent"
+		             	            android:layout_height="match_parent">
 		             	            
 		             	            <TextView
 					                    android:id="@+id/weather_windcilltemperature_text"
 					                    android:layout_width="wrap_content"
 					                    android:layout_height="wrap_content"
-					                    android:layout_centerHorizontal="true"
+					                    android:layout_centerInParent="true"
 					                    android:text="체감온도 -9.3°"
 					                    android:textColor="#000000"
 					                    android:textSize="10sp"/>
